--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -49,7 +49,7 @@
 		<br><br><br>
 		<ul>
 			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a></li>
-			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>			
+			<li><a href="https://dashboard.heroku.com/apps" target="_blank">Heroku</a></li>			
 			<li><a href="https://app.asana.com/0/103118255705889/103475074922274" target="_blank">Asana</a> || <a href="https://www.wetransfer.com/" target="_blank">Transferir archivos</a></li>
 			<li><a href="https://translate.google.es/?hl=es" target="_blank">Google translate</a> || <a href="http://www.wordreference.com/" target="_blank">Word Reference</a></li>
 			<li><a href="https://trello.com" target="_blank">Trello</a> <font size="1">ruben.castrobuzon@extern.isban.com / Pegaso0216</font></li>
