--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -48,6 +48,7 @@
 	<div id="home" class="container marketing">
 		<br><br><br>
 		<ul>
+			<li><a href="./resources/isban/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a></li>
 			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a></li>
 			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>			
 			<li><a href="https://app.asana.com/0/103118255705889/103475074922274" target="_blank">Asana</a></li>
@@ -57,6 +58,7 @@
 			<li><a href="https://javascript-minifier.com/" target="_blank">Minificar JavaScript</a> || <a href="https://cssminifier.com/" target="_blank">Minificar CSS</a> || <a href="http://unminify.com/" target="_blank">Desminificar</a></li>
 			<li><a href="https://www.base64decode.org/" target="_blank">Encode / Decode Base64</a></li>
 			<li><a href="https://www.befunky.com/" target="_blank">Retoque fotos</a> || <a href="http://www.colorfavs.com/" target="_blank">Paleta de colores a partir de una foto</a></li>
+			
 		</ul>
 	</div> <!-- fin <div class="container marketing"> -->
 	
@@ -71,7 +73,7 @@
 		<!-- Three columns of text below the carousel -->
 		<div class="row">
 			<div class="col-lg-4">
-			<br>
+			<br><br>
 			  		<h4>DESARROLLO</h4>
 					<ul>
 						<li><a href="http://180.112.108.25/redmine" target="_blank">REDMINE</a></li>
@@ -115,7 +117,7 @@
 					</ul>
 			</div><!-- /.col-lg-4 -->
 			<div class="col-lg-4">
-			<br>
+			<br><br>
 					<h4>Retail</h4>
 					<ul>
 						<li><a href="https://desextranet.intranet.banesto.es/LOGSUK_NS_ENS/BtoChannelDriver.ssobto?dse_operationName=LOGON" target="_blank">CERT</a></li>
@@ -149,7 +151,7 @@
 					</ul>
 			</div><!-- /.col-lg-4 -->
 			<div class="col-lg-4">
-			<br>
+			<br><br>
 			  		<h4>Despliegues SGS</h4>
 					<ul>
 						<li><a href="http://sgs.isban.gs.corp/sgs/jsp/core/login.jsp?error=0" target="_blank">SGS</a> || <a href="http://sgsl.isban.gs.corp/sgs" target="_blank">SGS 2</a> </li>
@@ -198,9 +200,16 @@
 		
 	<div id="contact" class="container marketing" style="display:none">
 		<br><br><br>
-		<ul>
-			<li>ruben.castro.buzon@bmail.com</li>
-		</ul>	
+		<p>
+		Rub&eacute;n Castro Buz&oacute;n<br>
+		Ingeniero de Software<br>
+		655 45 30 97<br>
+		ruben.castro.buzon@gmail.com<br>
+		Avda. Francisco Guerrero, 6 Portal E Casa 69<br>
+		28706 - San Sebasti&aacute;n de los Reyes (Madrid)	<br>
+		</p>		
+		<iframe src="https://goo.gl/maps/iEuNWPGtEkC2" width="0%" height="0" frameborder="0" style="border:0" allowfullscreen></iframe>		
+		<div style="width: 100%"><iframe width="50%" height="250" src="https://maps.google.com/maps?width=100%&height=600&hl=es&coord=40.6048,-3.5843700000000354&q=Avenida%20Francisco%20Guerrero%2C%206%20+(RCB)&ie=UTF8&t=&z=14&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/crear-un-mapa-de-google/">Crear Google Map</a> by <a href="https://www.mapsdirections.info/">Mapa España</a></iframe></div>
 	</div> <!-- fin <div class="container marketing"> -->
 	
 	 <!-- Bootstrap core JavaScript
@@ -235,6 +244,7 @@
 			$('#home').hide();
 			$('#indra').hide(); 
 			$('#isban').show(); 
+			$('#blogs').hide();
 			$('#contact').hide();			
 		});
 		
