--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -48,7 +48,8 @@
 	<div id="home" class="container marketing">
 		<br><br><br>
 		<ul>
-			<li><a href="./resources/isban/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a></li>
+			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a></li>
+			<li><a href="./resources/CV_RCB.doc" target="_blank">CV</a></li>
 			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a></li>
 			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>			
 			<li><a href="https://app.asana.com/0/103118255705889/103475074922274" target="_blank">Asana</a></li>
@@ -195,6 +196,7 @@
 			<li><a href="https://www.redhat.com/es/topics/microservices" target="_blank">https://www.redhat.com/es/topics/microservices</a></li>
 			<li><a href="http://carlosazaustre.com/que-es-la-autenticacion-con-token/" target="_blank">Introduccion a JSON Web Tokens (JWT)</a></li>
 			<li><a href="https://platzi.com/blog/introduccion-json-web-tokens/" target="_blank">https://platzi.com/blog/introduccion-json-web-tokens/</a></li>
+			<li>Kafka</li>
 		</ul>	
 	</div> <!-- fin <div class="container marketing"> -->
 		
