--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -48,14 +48,16 @@
 	<div id="home" class="container marketing">
 		<br><br><br>
 		<ul>
-			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a></li>
+			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a> || <a href="http://www.calendarioslaborales.com/calendario-laboral-madrid-2018.htm" target="_blank">2018</a></li>
 			<li><a href="./resources/CV_RCB.doc" target="_blank">CV</a></li>
+			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a></li>
-			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>			
+			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>
+			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="https://app.asana.com/0/103118255705889/103475074922274" target="_blank">Asana</a></li>
 			<li><a href="https://www.wetransfer.com/" target="_blank">Transferir archivos</a></li>
 			<li><a href="https://translate.google.es/?hl=es" target="_blank">Google translate</a> || <a href="http://www.wordreference.com/" target="_blank">Word Reference</a></li>
-			<li><a href="https://trello.com" target="_blank">Trello</a> <font size="1">ruben.castrobuzon@extern.isban.com / Pegaso0216</font></li>
+			<li><a href="https://trello.com" target="_blank">Trello</a> <font size="1">ruben.castrobuzon@extern.isban.com con google</font></li>
 			<li><a href="https://javascript-minifier.com/" target="_blank">Minificar JavaScript</a> || <a href="https://cssminifier.com/" target="_blank">Minificar CSS</a> || <a href="http://unminify.com/" target="_blank">Desminificar</a></li>
 			<li><a href="https://www.base64decode.org/" target="_blank">Encode / Decode Base64</a></li>
 			<li><a href="https://www.befunky.com/" target="_blank">Retoque fotos</a> || <a href="http://www.colorfavs.com/" target="_blank">Paleta de colores a partir de una foto</a></li>
@@ -66,7 +68,7 @@
 	<div id="indra" class="container marketing" style="display:none">
 		<br><br><br>
 		<ul>
-			<li>indra</li>			
+			<li><a href="https://www.indracompany.com/" target="_blank">Indra</a> || <a href="https://www.minsait.com/es" target="_blank">Minsait</a></li>			
 		</ul>	
 	</div> <!-- fin <div class="container marketing"> -->
 	
@@ -183,6 +185,7 @@
 		<br><br><br>
 		<ul>
 			<li><a href="http://www.arquitecturajava.com/" target="_blank">Blog arquitectura java</a></li>
+			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="http://carlosortiz.co/como-crear-una-aplicacion-web-java-container-less-con-springboot/" target="_blank">http://carlosortiz.co/como-crear-una-aplicacion-web-java-container-less-con-springboot/</a></li>
 			<li><a href="https://www.mkyong.com/spring-boot/spring-boot-hello-world-example-thymeleaf/" target="_blank">https://www.mkyong.com/spring-boot/spring-boot-hello-world-example-thymeleaf/</a></li>
 			<li><a href="http://www.robertocrespo.net/kaizen/como-construir-microservicios-con-spring-boot/" target="_blank">http://www.robertocrespo.net/kaizen/como-construir-microservicios-con-spring-boot/</a></li>
@@ -194,9 +197,13 @@
 			<li><a href="http://enmilocalfunciona.io/arquitectura-de-microservicios-parte-4/" target="_blank">enmilocalfunciona parte 4</a></li>
 			<li><a href="http://enmilocalfunciona.io/arquitectura-de-microservicios-parte-5-config-refresh//" target="_blank">enmilocalfunciona parte 5</a></li>
 			<li><a href="https://www.redhat.com/es/topics/microservices" target="_blank">https://www.redhat.com/es/topics/microservices</a></li>
+			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="http://carlosazaustre.com/que-es-la-autenticacion-con-token/" target="_blank">Introduccion a JSON Web Tokens (JWT)</a></li>
 			<li><a href="https://platzi.com/blog/introduccion-json-web-tokens/" target="_blank">https://platzi.com/blog/introduccion-json-web-tokens/</a></li>
+			<li style="list-style:none;">&nbsp;</li>
 			<li>Kafka</li>
+			<li style="list-style:none;">&nbsp;</li>
+			<li>Angular</li>
 		</ul>	
 	</div> <!-- fin <div class="container marketing"> -->
 		
