--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -211,7 +211,7 @@
 		<br><br><br>
 		<p>
 		Rub&eacute;n Castro Buz&oacute;n<br>
-		Ingeniero de Software<br>
+		Freelance Ingeniero de Software<br>
 		655 45 30 97<br>
 		ruben.castro.buzon@gmail.com<br>
 		Avda. Francisco Guerrero, 6 Portal E Casa 69<br>
