--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -28,7 +28,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="#home" id="optionHome">RCB</a>
+			  <a class="navbar-brand" href="">RCB</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 			  <ul class="nav navbar-nav">
