--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -69,6 +69,8 @@
 		<br><br><br>
 		<ul>
 			<li><a href="https://www.indracompany.com/" target="_blank">Indra</a> || <a href="https://www.minsait.com/es" target="_blank">Minsait</a></li>			
+			<li><a href="https://login.indraweb.net/vpn/tmindex.html" target="_blank">Indra Web</a> rcabuzon / LagunaMMYY</li> 
+			<li><a href="https://webmail.indra.es/owa/#path=/mail" target="_blank">Web Mail</a> rcabuzon@eservicios.indra.es / LagunaMMYY</li> 
 		</ul>	
 	</div> <!-- fin <div class="container marketing"> -->
 	
@@ -218,7 +220,7 @@
 		28706 - San Sebasti&aacute;n de los Reyes (Madrid)	<br>
 		</p>		
 		<iframe src="https://goo.gl/maps/iEuNWPGtEkC2" width="0%" height="0" frameborder="0" style="border:0" allowfullscreen></iframe>		
-		<div style="width: 100%"><iframe width="50%" height="250" src="https://maps.google.com/maps?width=100%&height=600&hl=es&coord=40.6048,-3.5843700000000354&q=Avenida%20Francisco%20Guerrero%2C%206%20+(RCB)&ie=UTF8&t=&z=14&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/crear-un-mapa-de-google/">Crear Google Map</a> by <a href="https://www.mapsdirections.info/">Mapa España</a></iframe></div>
+		<div style="width: 100%"><iframe width="50%" height="250" src="https://maps.google.com/maps?width=100%&height=600&hl=es&coord=40.6048,-3.5843700000000354&q=Avenida%20Francisco%20Guerrero%2C%206%20+(RCB)&ie=UTF8&t=&z=14&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/crear-un-mapa-de-google/">Crear Google Map</a> by <a href="https://www.mapsdirections.info/">Mapa EspaÃ±a</a></iframe></div>
 	</div> <!-- fin <div class="container marketing"> -->
 	
 	 <!-- Bootstrap core JavaScript
