--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -51,7 +51,7 @@
 			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a> || <a href="http://www.calendarioslaborales.com/calendario-laboral-madrid-2018.htm" target="_blank">2018</a></li>
 			<li><a href="./resources/CV_RCB.doc" target="_blank">CV</a></li>
 			<li style="list-style:none;">&nbsp;</li>
-			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a></li>
+			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a> ruben.castro.buzon@gmail.com / R21</li>
 			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>
 			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="https://app.asana.com/0/103118255705889/103475074922274" target="_blank">Asana</a></li>
