--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -51,7 +51,7 @@
 			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a> || <a href="http://www.calendarioslaborales.com/calendario-laboral-madrid-2018.htm" target="_blank">2018</a></li>
 			<li><a href="./resources/CV_RCB.doc" target="_blank">CV</a></li>
 			<li style="list-style:none;">&nbsp;</li>
-			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a> ruben.castro.buzon@gmail.com / R21</li>
+			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a> <font size="1">ruben.castro.buzon@gmail.com / R21 </font></li>
 			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>
 			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="https://app.asana.com/0/103118255705889/103475074922274" target="_blank">Asana</a></li>
@@ -69,8 +69,8 @@
 		<br><br><br>
 		<ul>
 			<li><a href="https://www.indracompany.com/" target="_blank">Indra</a> || <a href="https://www.minsait.com/es" target="_blank">Minsait</a></li>			
-			<li><a href="https://login.indraweb.net/vpn/tmindex.html" target="_blank">Indra Web</a> rcabuzon / LagunaMMYY</li> 
-			<li><a href="https://webmail.indra.es/owa/#path=/mail" target="_blank">Web Mail</a> rcabuzon@eservicios.indra.es / LagunaMMYY</li> 
+			<li><a href="https://login.indraweb.net/vpn/tmindex.html" target="_blank">Indra Web</a> <font size="1">rcabuzon / LagunaMMYY </font> </li> 
+			<li><a href="https://webmail.indra.es/owa/#path=/mail" target="_blank">Web Mail</a> <font size="1">rcabuzon@eservicios.indra.es / LagunaMMYY </font> </li> 
 		</ul>	
 	</div> <!-- fin <div class="container marketing"> -->
 	
@@ -90,7 +90,7 @@
 					<h4>ISBAN</h4>
 					<ul>
 						<!--<li><a href="https://mail.gsnetcloud.com/" target="_blank">Correo ISBAN</a></li>-->
-						<li><a href="https://sts.gsnetcloud.com/adfs/ls/?client-request-id=61dcc6fa-57a7-43de-815e-430f5ce7b709&username=&wa=wsignin1.0&wtrealm=urn%3afederation%3aMicrosoftOnline&wctx=estsredirect%3d2%26estsrequest%3drQIIAdNiNtQztFIxgAAjXRCpa5CWZqibnApiIYEiIS6BX8fuJC4Pv-fcGOfMH_N8O-csRp7UYr3M4qTEPL3k_NxVjPIZJSUFxVb6-vmlJTn5-dl6-WlpmcmpIEn9_PJE_R2MjBcYGVcxmZsZmxkbmxmZWJgampuYGpkZWeiZG6ZYJpqZm-kmmpib6poAJXSTEs2TdM0tLMxMzUyNUowTzW8x8fs7lpZkGIGI_KLMqtRPTJxp-UW58QX5xSWzmCXAttgXpSbm5NqiOI2ZKE9uYmYDKs7NzzvFzJZfkJqXmXKBhfEVC48BsxUHB5sAowSDAsMPFsZFrMDAcF7QPzNt9m7vDUs93uzYY8FwilU_wzgzLS_I3SSk2NnXx8XY36VU3zQ93M_FKMkk29K0IEw7LdfYpMQn0MAn0tbYynACG-MENrZdnIRCDQA1" target="_blank">Correo ISBAN</a>(xIS01547@es.isban.com)</li>
+						<li><a href="https://sts.gsnetcloud.com/adfs/ls/?client-request-id=61dcc6fa-57a7-43de-815e-430f5ce7b709&username=&wa=wsignin1.0&wtrealm=urn%3afederation%3aMicrosoftOnline&wctx=estsredirect%3d2%26estsrequest%3drQIIAdNiNtQztFIxgAAjXRCpa5CWZqibnApiIYEiIS6BX8fuJC4Pv-fcGOfMH_N8O-csRp7UYr3M4qTEPL3k_NxVjPIZJSUFxVb6-vmlJTn5-dl6-WlpmcmpIEn9_PJE_R2MjBcYGVcxmZsZmxkbmxmZWJgampuYGpkZWeiZG6ZYJpqZm-kmmpib6poAJXSTEs2TdM0tLMxMzUyNUowTzW8x8fs7lpZkGIGI_KLMqtRPTJxp-UW58QX5xSWzmCXAttgXpSbm5NqiOI2ZKE9uYmYDKs7NzzvFzJZfkJqXmXKBhfEVC48BsxUHB5sAowSDAsMPFsZFrMDAcF7QPzNt9m7vDUs93uzYY8FwilU_wzgzLS_I3SSk2NnXx8XY36VU3zQ93M_FKMkk29K0IEw7LdfYpMQn0MAn0tbYynACG-MENrZdnIRCDQA1" target="_blank">Correo ISBAN</a><font size="1">(xIS01547@es.isban.com)</font></li>
 						<li><a href="http://sociedades.aacc.gs.corp:8114/irj/isbempleados?tz=1" target="_blank"> Imputaciones ISBAN</a></li>
 						<li><a href="http://newsban.isban.gs.corp/acceso_colaboradores.html" target="_blank">Isbania</a></li>
 						<li><a href="http://gsc.produban.gs.corp/" target="_blank">Remedy</a> || <a href="http://wikibank.isban.gs.corp/wikibank/index.php?title=Gestion_de_Incidencias_SGS_-_Remedy" target="_blank">Categorizacion</a></li>
@@ -143,7 +143,7 @@
 					</ul>
 					<h4>SCU</h4>
 					<ul>
-						<li><a href="https://desextranet.isban.dev.corp/POSIGL_ENS/BtoChannelDriver.ssobto?dse_operationName=homePage" target="_blank">CERT</a>  paymbb / Madrid12 | CSATEST / Madrid12 Firma: 12345678 UID = 12859996 | Belenpru / Madrid25  </li>
+						<li><a href="https://desextranet.isban.dev.corp/POSIGL_ENS/BtoChannelDriver.ssobto?dse_operationName=homePage" target="_blank">CERT</a> <font size="1"> paymbb / Madrid12 | CSATEST / Madrid12 Firma: 12345678 UID = 12859996 | Belenpru / Madrid25 </font> </li>
 						<li><a href="http://solutioning.santanderuk.corp:8080/redmine/projects/ebancore/wiki" target="_blank">PRE</a></li>
 						<li><a href="https://corporate.santander.co.uk/LOGSCU_NS_ENS/BtoChannelDriver.bto?dse_operationName=OP_LOG_ON" target="_blank">PRE</a></li>
 					</ul>
