--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -69,7 +69,7 @@
 		<br><br><br>
 		<ul>
 			<li><a href="https://www.indracompany.com/" target="_blank">Indra</a> || <a href="https://www.minsait.com/es" target="_blank">Minsait</a></li>			
-			<li><a href="https://login.indraweb.net/vpn/tmindex.html" target="_blank">Indra Web</a> <font size="1">rcabuzon / LagunaMMYY </font> </li> 
+			<li><a href="https://www.indraweb.net/" target="_blank">Indra Web</a> <font size="1">rcabuzon / LagunaMMYY </font> </li> 
 			<li><a href="https://webmail.indra.es/owa/#path=/mail" target="_blank">Web Mail</a> <font size="1">rcabuzon@eservicios.indra.es / LagunaMMYY </font> </li> 
 		</ul>	
 	</div> <!-- fin <div class="container marketing"> -->
