--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -61,6 +61,7 @@
 			<li><a href="https://translate.google.es/?hl=es" target="_blank">Google translate</a> || <a href="http://www.wordreference.com/" target="_blank">Word Reference</a> || <a href="http://www.reverso.net/text_translation.aspx?lang=ES" target="_blank">Reverso</a></li>
 			<li><a href="https://trello.com" target="_blank">Trello</a> <font size="1">ruben.castrobuzon@extern.isban.com con google</font></li>
 			<li><a href="https://javascript-minifier.com/" target="_blank">Minificar JavaScript</a> || <a href="https://cssminifier.com/" target="_blank">Minificar CSS</a> || <a href="http://unminify.com/" target="_blank">Desminificar</a></li>
+			<li><a href="https://text-compare.com/" target="_blank">Comparador de textos</a></li>
 			<li><a href="https://www.base64decode.org/" target="_blank">Encode / Decode Base64</a></li>
 			<li><a href="https://www.befunky.com/" target="_blank">Retoque fotos</a> || <a href="http://www.colorfavs.com/" target="_blank">Paleta de colores a partir de una foto</a></li>
 			
