Added hours link
Added hours link

--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -50,6 +50,7 @@
 		<ul>
 			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a> || <a href="http://www.calendarioslaborales.com/calendario-laboral-madrid-2018.htm" target="_blank">2018</a></li>
 			<li><a href="./resources/CV_RCB.doc" target="_blank">CV</a></li>
+			<li><a href="./resources/Horas_RCB.xlsx" target="_blank">Horas</a></li>
 			<li style="list-style:none;">&nbsp;</li>
 			<li><a href="https://github.com/RubenCastroBuzon/" target="_blank">GitHub</a> <font size="1">ruben.castro.buzon@gmail.com / R21 </font></li>
 			<li><a href="https://dashboard.heroku.com/apps/rubencastrobuzon/" target="_blank">Heroku</a></li>
