Added jira indra

--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -75,6 +75,7 @@
 			<li><a href="https://www.indracompany.com/" target="_blank">Indra</a> || <a href="https://www.minsait.com/es" target="_blank">Minsait</a></li>			
 			<li><a href="https://www.indraweb.net/" target="_blank">Indra Web</a> <font size="1">rcabuzon / LagunaMMYY </font> </li> 
 			<li><a href="https://webmail.indra.es/owa/#path=/mail" target="_blank">Web Mail</a> <font size="1">rcabuzon@eservicios.indra.es / LagunaMMYY </font> </li> 
+			<li><a href="https://jira.indra.es/" target="_blank">Jira</a> <font size="1">rcabuzon / LagunaMMYY </font> </li> 
 			<li><a href="https://mind.indra.es/x/UpRdE" target="_blank">Confluence ENEL</a> <font size="1">rcabuzon / LagunaMMYY </font> </li> 
 		</ul>
 		<h4>DESARROLLO</h4>
