--- a/RCB_index.htm
+++ b/RCB_index.htm
@@ -48,6 +48,7 @@
 	<div id="home" class="container marketing">
 		<br><br><br>
 		<ul>
+			<li><a href="http://rcb78.ddns.net/" target="_blank">NAS exterior</a> || <a href="http://serverbox/" target="_blank">NAS interior</a></li>
 			<li><a href="./resources/Vacaciones y Calendario laboral.xlsx" target="_blank">Calendario laboral</a> || <a href="http://www.calendarioslaborales.com/calendario-laboral-madrid-2018.htm" target="_blank">2018</a> || <a href="http://www.dias-laborables.es/" target="_blank">Días laborables</a></li>
 			<li><a href="./resources/CV_RCB.doc" target="_blank">CV</a></li>
 			<li><a href="./resources/Horas_RCB.xlsx" target="_blank">Horas</a></li>
